CKA/Practise/configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-demo
spec:
  containers:
    - name: test-container
      image: nginx
  restartPolicy: Never
