CKA/Practise/execsidevol.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod11
spec:
  containers:
    - name: nginx-container
      image: nginx
      volumeMounts:
      - mountPath: /test-mnt
        name: hpvol
  volumes:
  - name: test-vol
    hostPath:
      path: /test-vol
