CKA/Practise/1.yml
apiVersion: v1

kind: Service

metadata:

   name: my-service

   labels:

      app: nginx

spec:

   selector:

      app: nginx

   type: NodePort

   ports:

     - nodePort: 31000

       port: 80

       targetPort: 80
