CKA/Practise/nginx-2-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-2-network-policy
spec: 
  podSelector:
    matchLabels:
      app: nginx-2
  policyTypes:
     - Ingress 
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: nginx-1
    ports:
    - protocol: TCP
      port: 8081
